--- a/services/config.json
+++ b/services/config.json
@@ -1,157 +1,171 @@
 {
-    "log":{
-        "access":"/dev/null",
-        "error":"/dev/null",
-        "loglevel":"none"
-    },
-    "inbounds":[
-        {
-            "port":8080,
-            "protocol":"vless",
-            "settings":{
-                "clients":[
-                    {
-                        "id":"35802255-d348-4a5e-b276-29de136c9dad",
-                        "flow":"xtls-rprx-direct"
-                    }
-                ],
-                "decryption":"none",
-                "fallbacks":[
-                    {
-                        "dest":3001
-                    },
-                    {
-                        "path":"/argo-vless",
-                        "dest":3002
-                    },
-                    {
-                        "path":"/argo-vmess",
-                        "dest":3003
-                    }
-                ]
-            },
-            "streamSettings":{
-                "network":"tcp"
-            }
-        },
-        {
-            "port":3001,
-            "listen":"127.0.0.1",
-            "protocol":"vless",
-            "settings":{
-                "clients":[
-                    {
-                        "id":"35802255-d348-4a5e-b276-29de136c9dad"
-                    }
-                ],
-                "decryption":"none"
-            },
-            "streamSettings":{
-                "network":"ws",
-                "security":"none"
-            }
-        },
-        {
-            "port":3002,
-            "listen":"127.0.0.1",
-            "protocol":"vless",
-            "settings":{
-                "clients":[
-                    {
-                        "id":"35802255-d348-4a5e-b276-29de136c9dad",
-                        "level":0
-                    }
-                ],
-                "decryption":"none"
-            },
-            "streamSettings":{
-                "network":"ws",
-                "security":"none",
-                "wsSettings":{
-                    "path":"/argo-vless"
-                }
-            },
-            "sniffing":{
-                "enabled":true,
-                "destOverride":[
-                    "http",
-                    "tls"
-                ],
-                "metadataOnly":false
-            }
-        },
-        {
-            "port":3003,
-            "listen":"127.0.0.1",
-            "protocol":"vmess",
-            "settings":{
-                "clients":[
-                    {
-                        "id":"35802255-d348-4a5e-b276-29de136c9dad",
-                        "alterId":0
-                    }
-                ]
-            },
-            "streamSettings":{
-                "network":"ws",
-                "wsSettings":{
-                    "path":"/argo-vmess"
-                }
-            },
-            "sniffing":{
-                "enabled":true,
-                "destOverride":[
-                    "http",
-                    "tls"
-                ],
-                "metadataOnly":false
-            }
-        }
-    ],
-    "dns":{
-        "servers":[
-            "https+local://8.8.8.8/dns-query"
+  "log": {
+    "access": "/dev/null",
+    "error": "/dev/null",
+    "loglevel": "none"
+  },
+  "inbounds": [
+    {
+      "port": 8080,
+      "protocol": "vless",
+      "settings": {
+        "clients": [
+          {
+            "id": "35802255-d348-4a5e-b276-29de136c9dad",
+            "flow": "xtls-rprx-direct"
+          }
+        ],
+        "decryption": "none",
+        "fallbacks": [
+          {
+            "dest": 3001
+          },
+          {
+            "path": "/argo-vless",
+            "dest": 3002
+          },
+          {
+            "path": "/argo-vmess",
+            "dest": 3003
+          },
+          {
+            "path": "/argo-socks",
+            "dest": 3004
+          }
         ]
+      },
+      "streamSettings": {
+        "network": "tcp"
+      }
     },
-    "outbounds":[
-        {
-            "protocol":"freedom"
-        },
-        {
-            "tag":"WARP",
-            "protocol":"wireguard",
-            "settings":{
-                "secretKey":"SPdSuMCJ1AOMkomvjfT91xcjpsJ9u7pvW+st/U+5S2g=",
-                "address":[
-                    "172.16.0.2/32",
-                    "2606:4700:110:8dbb:14f:68ee:ac5c:eb1d/128"
-                ],
-                "peers":[
-                    {
-                        "publicKey":"bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
-                        "endpoint":"162.159.195.127:1002"
-                    }
-                ],
-                "reserved": [83,51,25],
-                "mtu": 1280
-            }
+    {
+      "port": 3001,
+      "listen": "127.0.0.1",
+      "protocol": "vless",
+      "settings": {
+        "clients": [
+          {
+            "id": "35802255-d348-4a5e-b276-29de136c9dad"
+          }
+        ],
+        "decryption": "none"
+      },
+      "streamSettings": {
+        "network": "ws",
+        "security": "none"
+      }
+    },
+    {
+      "port": 3002,
+      "listen": "127.0.0.1",
+      "protocol": "vless",
+      "settings": {
+        "clients": [
+          {
+            "id": "35802255-d348-4a5e-b276-29de136c9dad",
+            "level": 0
+          }
+        ],
+        "decryption": "none"
+      },
+      "streamSettings": {
+        "network": "ws",
+        "security": "none",
+        "wsSettings": {
+          "path": "/argo-vless"
         }
-    ],
-    "routing":{
-        "domainStrategy":"AsIs",
-        "rules":[
-            {
-                "type":"field",
-                "domain":[
-                    "domain:openai.com",
-                    "domain:ai.com",
-                    "domain:nflxvideo.net",
-                    "domain:fast.com",
-                    "domain:whatismyipaddress.com",
-                    "domain:google.com"
-                ],
-                "outboundTag":"WARP"
-            }
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": ["http", "tls"],
+        "metadataOnly": false
+      }
+    },
+    {
+      "port": 3003,
+      "listen": "127.0.0.1",
+      "protocol": "vmess",
+      "settings": {
+        "clients": [
+          {
+            "id": "35802255-d348-4a5e-b276-29de136c9dad",
+            "alterId": 0
+          }
         ]
+      },
+      "streamSettings": {
+        "network": "ws",
+        "wsSettings": {
+          "path": "/argo-vmess"
+        }
+      },
+      "sniffing": {
+        "enabled": true,
+        "destOverride": ["http", "tls"],
+        "metadataOnly": false
+      }
+    },
+    {
+      "port": 3004,
+      "listen": "127.0.0.1",
+      "protocol": "socks",
+      "settings": {
+        "auth": "password",
+        "accounts": [{ "user": "test", "pass": "test" }]
+      },
+      "streamSettings": {
+        "network": "ws",
+        "wsSettings": { "path": "/argo-socks" }
+      }
     }
+  ],
+  "dns": {
+    "servers": ["https+local://8.8.8.8/dns-query"]
+  },
+  "outbounds": [
+    {
+      "protocol": "freedom"
+    },
+    {
+      "tag": "WARP",
+      "protocol": "wireguard",
+      "settings": {
+        "secretKey": "SPdSuMCJ1AOMkomvjfT91xcjpsJ9u7pvW+st/U+5S2g=",
+        "address": [
+          "172.16.0.2/32",
+          "2606:4700:110:8dbb:14f:68ee:ac5c:eb1d/128"
+        ],
+        "peers": [
+          {
+            "publicKey": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "endpoint": "162.159.195.127:1002"
+          }
+        ],
+        "reserved": [83, 51, 25],
+        "mtu": 1280
+      }
+    },
+    {
+      "protocol": "socks",
+      "tag": "sockstor",
+      "settings": { "servers": [{ "address": "127.0.0.1", "port": 9050 }] }
+    }
+  ],
+  "routing": {
+    "domainStrategy": "AsIs",
+    "rules": [
+      {
+        "type": "field",
+        "domain": [
+          "domain:openai.com",
+          "domain:ai.com",
+          "domain:nflxvideo.net",
+          "domain:fast.com",
+          "domain:whatismyipaddress.com",
+          "domain:google.com"
+        ],
+        "outboundTag": "WARP"
+      }
+    ]
+  }
 }
